--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "bootstrap": "^5.0.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -49,6 +50,7 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.0.0",
     "react-refresh": "^0.10.0",
+    "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
